--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -6,3 +6,8 @@ mpi:
 pin_run_as_build:
   mpich: x.x
   openmpi: x.x
+
+channel_sources:
+  - cryoem, defaults,conda-forge
+channel_targets:
+  - cryoem main
