MNT: Re-rendered with conda-build 3.18.11, conda-smithy 3.6.0, and conda-forge-pinning 2019.08.27

--- a/.azure-pipelines/azure-pipelines-osx.yml
+++ b/.azure-pipelines/azure-pipelines-osx.yml
@@ -6,19 +6,28 @@ jobs:
 - job: osx
   pool:
     vmImage: macOS-10.13
-  timeoutInMinutes: 600
+  timeoutInMinutes: 360
   strategy:
     maxParallel: 8
     matrix:
-      osx_mpimpich:
-        CONFIG: osx_mpimpich
-        UPLOAD_PACKAGES: True
-      osx_mpinompi:
-        CONFIG: osx_mpinompi
-        UPLOAD_PACKAGES: True
-      osx_mpiopenmpi:
-        CONFIG: osx_mpiopenmpi
-        UPLOAD_PACKAGES: True
+      osx_fortran_compiler_version4mpimpich:
+        CONFIG: osx_fortran_compiler_version4mpimpich
+        UPLOAD_PACKAGES: False
+      osx_fortran_compiler_version4mpinompi:
+        CONFIG: osx_fortran_compiler_version4mpinompi
+        UPLOAD_PACKAGES: False
+      osx_fortran_compiler_version4mpiopenmpi:
+        CONFIG: osx_fortran_compiler_version4mpiopenmpi
+        UPLOAD_PACKAGES: False
+      osx_fortran_compiler_version7mpimpich:
+        CONFIG: osx_fortran_compiler_version7mpimpich
+        UPLOAD_PACKAGES: False
+      osx_fortran_compiler_version7mpinompi:
+        CONFIG: osx_fortran_compiler_version7mpinompi
+        UPLOAD_PACKAGES: False
+      osx_fortran_compiler_version7mpiopenmpi:
+        CONFIG: osx_fortran_compiler_version7mpiopenmpi
+        UPLOAD_PACKAGES: False
 
   steps:
   # TODO: Fast finish on azure pipelines?
