--- a/.azure-pipelines/azure-pipelines-linux.yml
+++ b/.azure-pipelines/azure-pipelines-linux.yml
@@ -6,21 +6,21 @@ jobs:
 - job: linux
   pool:
     vmImage: ubuntu-16.04
-  timeoutInMinutes: 600
+  timeoutInMinutes: 360
   strategy:
     maxParallel: 8
     matrix:
       linux_mpimpich:
         CONFIG: linux_mpimpich
-        UPLOAD_PACKAGES: True
+        UPLOAD_PACKAGES: False
         DOCKER_IMAGE: condaforge/linux-anvil-comp7
       linux_mpinompi:
         CONFIG: linux_mpinompi
-        UPLOAD_PACKAGES: True
+        UPLOAD_PACKAGES: False
         DOCKER_IMAGE: condaforge/linux-anvil-comp7
       linux_mpiopenmpi:
         CONFIG: linux_mpiopenmpi
-        UPLOAD_PACKAGES: True
+        UPLOAD_PACKAGES: False
         DOCKER_IMAGE: condaforge/linux-anvil-comp7
   steps:
   # configure qemu binfmt-misc running.  This allows us to run docker containers
