--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -6,14 +6,14 @@ jobs:
 - job: win
   pool:
     vmImage: vs2017-win2016
-  timeoutInMinutes: 600
+  timeoutInMinutes: 360
   strategy:
     maxParallel: 4
     matrix:
       win_c_compilervs2015cxx_compilervs2015vc14:
         CONFIG: win_c_compilervs2015cxx_compilervs2015vc14
         CONDA_BLD_PATH: D:\\bld\\
-        UPLOAD_PACKAGES: True
+        UPLOAD_PACKAGES: False
   steps:
     # TODO: Fast finish on azure pipelines?
     - script: |
