--- a/.ci_support/osx_fortran_compiler_version4mpiopenmpi.yaml
+++ b/.ci_support/osx_fortran_compiler_version4mpiopenmpi.yaml
@@ -1,23 +1,27 @@
+MACOSX_DEPLOYMENT_TARGET:
+- '10.9'
 c_compiler:
-- gcc
+- clang
 c_compiler_version:
-- '8'
+- '4'
 channel_sources:
-- conda-forge,defaults
+- cryoem, defaults,conda-forge
 channel_targets:
-- conda-forge main
+- cryoem main
 cxx_compiler:
-- gxx
+- clangxx
 cxx_compiler_version:
-- '8'
-docker_image:
-- condaforge/linux-anvil-ppc64le
+- '4'
 fortran_compiler:
 - gfortran
 fortran_compiler_version:
-- '8'
+- '4'
+macos_machine:
+- x86_64-apple-darwin13.4.0
+macos_min_version:
+- '10.9'
 mpi:
-- mpich
+- openmpi
 pin_run_as_build:
   zlib:
     max_pin: x.x
