--- a/.ci_support/osx_fortran_compiler_version7mpimpich.yaml
+++ b/.ci_support/osx_fortran_compiler_version7mpimpich.yaml
@@ -3,15 +3,15 @@ MACOSX_DEPLOYMENT_TARGET:
 c_compiler:
 - clang
 c_compiler_version:
-- '9'
+- '4'
 channel_sources:
-- conda-forge,defaults
+- cryoem, defaults,conda-forge
 channel_targets:
-- conda-forge main
+- cryoem main
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
-- '9'
+- '4'
 fortran_compiler:
 - gfortran
 fortran_compiler_version:
@@ -21,7 +21,7 @@ macos_machine:
 macos_min_version:
 - '10.9'
 mpi:
-- openmpi
+- mpich
 pin_run_as_build:
   zlib:
     max_pin: x.x
