--- a/.ci_support/osx_fortran_compiler_version7mpinompi.yaml
+++ b/.ci_support/osx_fortran_compiler_version7mpinompi.yaml
@@ -3,15 +3,15 @@ MACOSX_DEPLOYMENT_TARGET:
 c_compiler:
 - clang
 c_compiler_version:
-- '9'
+- '4'
 channel_sources:
-- conda-forge,defaults
+- cryoem, defaults,conda-forge
 channel_targets:
-- conda-forge main
+- cryoem main
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
-- '9'
+- '4'
 fortran_compiler:
 - gfortran
 fortran_compiler_version:
