--- a/.ci_support/win_c_compilervs2015cxx_compilervs2015vc14.yaml
+++ b/.ci_support/win_c_compilervs2015cxx_compilervs2015vc14.yaml
@@ -1,9 +1,9 @@
 c_compiler:
 - vs2015
 channel_sources:
-- conda-forge,defaults
+- cryoem, defaults,conda-forge
 channel_targets:
-- conda-forge main
+- cryoem main
 cxx_compiler:
 - vs2015
 mpi:
