--- a/.azure-pipelines/azure-pipelines-osx.yml
+++ b/.azure-pipelines/azure-pipelines-osx.yml
@@ -10,23 +10,14 @@ jobs:
   strategy:
     maxParallel: 8
     matrix:
-      osx_fortran_compiler_version4mpimpich:
-        CONFIG: osx_fortran_compiler_version4mpimpich
+      osx_mpimpich:
+        CONFIG: osx_mpimpich
         UPLOAD_PACKAGES: False
-      osx_fortran_compiler_version4mpinompi:
-        CONFIG: osx_fortran_compiler_version4mpinompi
+      osx_mpinompi:
+        CONFIG: osx_mpinompi
         UPLOAD_PACKAGES: False
-      osx_fortran_compiler_version4mpiopenmpi:
-        CONFIG: osx_fortran_compiler_version4mpiopenmpi
-        UPLOAD_PACKAGES: False
-      osx_fortran_compiler_version7mpimpich:
-        CONFIG: osx_fortran_compiler_version7mpimpich
-        UPLOAD_PACKAGES: False
-      osx_fortran_compiler_version7mpinompi:
-        CONFIG: osx_fortran_compiler_version7mpinompi
-        UPLOAD_PACKAGES: False
-      osx_fortran_compiler_version7mpiopenmpi:
-        CONFIG: osx_fortran_compiler_version7mpiopenmpi
+      osx_mpiopenmpi:
+        CONFIG: osx_mpiopenmpi
         UPLOAD_PACKAGES: False
 
   steps:
