--- a/.ci_support/osx_mpinompi.yaml
+++ b/.ci_support/osx_mpinompi.yaml
@@ -12,16 +12,12 @@ cxx_compiler:
 - clangxx
 cxx_compiler_version:
 - '4'
-fortran_compiler:
-- gfortran
-fortran_compiler_version:
-- '4'
 macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
 - '10.9'
 mpi:
-- openmpi
+- nompi
 pin_run_as_build:
   zlib:
     max_pin: x.x
