--- a/.travis.yml
+++ b/.travis.yml
@@ -10,27 +10,15 @@ env:
 
 matrix:
   include:
-    - env: CONFIG=osx_fortran_compiler_version4mpimpich UPLOAD_PACKAGES=True PLATFORM=osx-64
+    - env: CONFIG=osx_mpimpich UPLOAD_PACKAGES=True PLATFORM=osx-64
       os: osx
       osx_image: xcode9.4
 
-    - env: CONFIG=osx_fortran_compiler_version4mpinompi UPLOAD_PACKAGES=True PLATFORM=osx-64
+    - env: CONFIG=osx_mpinompi UPLOAD_PACKAGES=True PLATFORM=osx-64
       os: osx
       osx_image: xcode9.4
 
-    - env: CONFIG=osx_fortran_compiler_version4mpiopenmpi UPLOAD_PACKAGES=True PLATFORM=osx-64
-      os: osx
-      osx_image: xcode9.4
-
-    - env: CONFIG=osx_fortran_compiler_version7mpimpich UPLOAD_PACKAGES=True PLATFORM=osx-64
-      os: osx
-      osx_image: xcode9.4
-
-    - env: CONFIG=osx_fortran_compiler_version7mpinompi UPLOAD_PACKAGES=True PLATFORM=osx-64
-      os: osx
-      osx_image: xcode9.4
-
-    - env: CONFIG=osx_fortran_compiler_version7mpiopenmpi UPLOAD_PACKAGES=True PLATFORM=osx-64
+    - env: CONFIG=osx_mpiopenmpi UPLOAD_PACKAGES=True PLATFORM=osx-64
       os: osx
       osx_image: xcode9.4
 
