--- a/.azure-pipelines/azure-pipelines-osx.yml
+++ b/.azure-pipelines/azure-pipelines-osx.yml
@@ -10,14 +10,8 @@ jobs:
   strategy:
     maxParallel: 8
     matrix:
-      osx_mpimpich:
-        CONFIG: osx_mpimpich
-        UPLOAD_PACKAGES: False
-      osx_mpinompi:
-        CONFIG: osx_mpinompi
-        UPLOAD_PACKAGES: False
-      osx_mpiopenmpi:
-        CONFIG: osx_mpiopenmpi
+      osx_:
+        CONFIG: osx_
         UPLOAD_PACKAGES: False
 
   steps:
