--- a/.travis.yml
+++ b/.travis.yml
@@ -10,15 +10,7 @@ env:
 
 matrix:
   include:
-    - env: CONFIG=osx_mpimpich UPLOAD_PACKAGES=True PLATFORM=osx-64
-      os: osx
-      osx_image: xcode9.4
-
-    - env: CONFIG=osx_mpinompi UPLOAD_PACKAGES=True PLATFORM=osx-64
-      os: osx
-      osx_image: xcode9.4
-
-    - env: CONFIG=osx_mpiopenmpi UPLOAD_PACKAGES=True PLATFORM=osx-64
+    - env: CONFIG=osx_ UPLOAD_PACKAGES=True PLATFORM=osx-64
       os: osx
       osx_image: xcode9.4
 
