--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -69,9 +69,11 @@ requirements:
   host:
     - {{ mpi }}  # [mpi != 'nompi']
     - zlib
+    - libaec     # [unix]
   run:
     - {{ mpi }}  # [mpi != 'nompi']
     - zlib
+    - libaec     # [unix]
 
 outputs:
   - name: hdf5
