--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -6,6 +6,6 @@ pin_run_as_build:
   openmpi: x.x
 
 channel_sources:
-  - cryoem, defaults,conda-forge
+  - conda-forge, defaults
 channel_targets:
   - cryoem main
