--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -3,7 +3,7 @@ c_compiler:
 c_compiler_version:
 - '7'
 channel_sources:
-- cryoem, defaults,conda-forge
+- conda-forge, defaults
 channel_targets:
 - cryoem main
 cxx_compiler:
