--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -5,7 +5,7 @@ c_compiler:
 c_compiler_version:
 - '4'
 channel_sources:
-- cryoem, defaults,conda-forge
+- conda-forge, defaults
 channel_targets:
 - cryoem main
 cxx_compiler:
