--- a/.ci_support/win_c_compilervs2015cxx_compilervs2015vc14.yaml
+++ b/.ci_support/win_c_compilervs2015cxx_compilervs2015vc14.yaml
@@ -1,7 +1,7 @@
 c_compiler:
 - vs2015
 channel_sources:
-- cryoem, defaults,conda-forge
+- conda-forge, defaults
 channel_targets:
 - cryoem main
 cxx_compiler:
